# seaweedfs

./: .codespellrc  .gitignore  .gitlab-ci.yml  .gitpod.yml  .project  .travis.yml  .travis.yml.disabled  ALL_FIXES_SUMMARY.md  BIND_MOUNT_ANALYSIS.md  BUCKET_POLICY_ENGINE_INTEGRATION.md  BUG_FOUND_SUBSCRIBER_CACHING.md  BUILD_NOTES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMBINED_TTFB_PROFILING.md  CRITICAL_BUG_SMQ_VALUE_LOSS.md  CRITICAL_FILER_BUG_SUMMARY.md  DESIGN.md  Dockerfile  Dockerfile.go_build  Dockerfile.local  ENHANCED_CLI_FEATURES.md  FINAL_ROOT_CAUSE_ANALYSIS.md  FINAL_SESSION_SUMMARY.md  FIX_ISSUE_7941.md  IMPLEMENTATION_SUMMARY.md  KAFKA_GATEWAY_PLAN.md  KAFKA_SCHEMA_DEVELOPMENT_PLAN.md  KAFKA_SMQ_INTEGRATION_SUMMARY.md  LICENSE  ML_OPTIMIZATION_PLAN.md  MULTIPART_COPY_TEST_SUMMARY.md  Makefile  NOOP_RECORDS_ANALYSIS.md  OFFSET_FILTER_BUG_SOLVED.md  PARQUET_PUSHDOWN_DESIGN.md  PARQUET_PUSHDOWN_DEV_PLAN.md  PERSISTENCE_SOLVED.md  QUICK_TEST_RESULTS.md  README.md  (+37 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Release1.yml  auto_tag.yml  binaries_dev.yml  binaries_release.yml  binaries_release0.yml  binaries_release1.yml  binaries_release2.yml  binaries_release3.yml  binaries_release4.yml  (+86 more)
.superset/: config.json
admin/: .session_key
cas-deploy/: publish-helm.sh  publish-image.sh
docker/: Dockerfile  Dockerfile.e2e  Dockerfile.foundationdb_large  Dockerfile.gccgo_build  Dockerfile.go_build  Dockerfile.go_build_large  Dockerfile.go_rocksdb  Dockerfile.local  Dockerfile.mysql  Dockerfile.rocksdb  Dockerfile.rocksdb_dev_env  Dockerfile.rocksdb_large  Dockerfile.rocksdb_large_local  Dockerfile.s3tests  Dockerfile.tarantool.dev_env  Dockerfile.udm  Dockerfile.udm.go_build  Makefile  README.md  config.json  dev-compose.yml  docker-compose.yml  entrypoint.sh  entrypoint.udm.sh  entrypoint_e2e.sh  filer.toml  filer_foundationdb.toml  filer_leveldb3.toml  filer_mysql.toml  filer_postgres2.toml  filer_postgres_s3.toml  filer_rocksdb.toml  filer_tikv.toml  get_fdb_checksum.sh  go.sum  image-tag  local-cluster-compose.yml  local-compose.yml  local-dev-compose.yml  local-k8s-compose.yml  (+14 more)
docs/: Makefile  api.rst  benchmarks.rst  changelist.rst  clients.rst  conf.py  directories.rst  distributed_filer.rst  failover.rst  gettingstarted.rst  index.rst  make.bat  optimization.rst  replication.rst  requirements.txt  scalable_iam_user_storage.md  ttl.rst  usecases.rst
helm/: index.yaml  seaweedfs-3.42.tgz  seaweedfs-3.43.tgz  seaweedfs-3.44.tgz  seaweedfs-3.45.tgz  seaweedfs-3.46.tgz  seaweedfs-3.47.tgz  seaweedfs-3.48.tgz  seaweedfs-3.49.tgz  seaweedfs-3.51.tgz  seaweedfs-3.52.tgz  seaweedfs-3.53.tgz  seaweedfs-3.54.tgz  seaweedfs-3.55.tgz  seaweedfs-3.56.tgz  seaweedfs-3.57.0.tgz  seaweedfs-3.58.0.tgz  seaweedfs-3.59.0.tgz  seaweedfs-3.59.1.tgz  seaweedfs-3.59.2.tgz  seaweedfs-3.59.3.tgz  seaweedfs-3.59.4.tgz  seaweedfs-3.60.0.tgz  seaweedfs-3.60.1.tgz  seaweedfs-3.61.0.tgz  seaweedfs-3.62.0.tgz  seaweedfs-3.63.0.tgz  seaweedfs-3.64.0.tgz  seaweedfs-3.65.0.tgz  seaweedfs-3.65.1.tgz  seaweedfs-3.66.0.tgz  seaweedfs-3.67.0.tgz  seaweedfs-3.68.0.tgz  seaweedfs-4.0.0.tgz  seaweedfs-4.0.2.tgz  seaweedfs-4.0.375.tgz  seaweedfs-4.0.376.tgz  seaweedfs-4.0.377.tgz  seaweedfs-4.0.378.tgz  seaweedfs-4.0.379.tgz  (+56 more)
jdbc-driver/: README.md  pom.xml
k8s/: README.md
m9333/: log
note/: memory_usage.txt  replication.txt  security.txt  weedfs.txt
postgres-examples/: README.md  test_client.py
seaweed-volume/: Cargo.toml  DEV_PLAN.md  MISSING_FEATURES.md  PARITY_PLAN.md  README.md  build.rs
seaweed-volume/proto/: master.proto  remote.proto  volume_server.proto
seaweed-volume/src/: config.rs  images.rs  lib.rs  main.rs  metrics.rs  security.rs  version.rs
seaweed-volume/src/remote_storage/: endpoint_guard.rs  mod.rs  s3.rs  s3_tier.rs
seaweed-volume/src/security/: tls.rs
seaweed-volume/src/server/: debug.rs  grpc_client.rs  grpc_server.rs  handlers.rs  heartbeat.rs  memory_status.rs  mod.rs  profiling.rs  request_id.rs  server_stats.rs  store_ec.rs  ui.rs  volume_server.rs  write_queue.rs
seaweed-volume/src/storage/: disk_location.rs  mod.rs  needle_map.rs  store.rs  store_ec_mirror.rs  store_ec_reconcile.rs  super_block.rs  types.rs  volume.rs
seaweed-volume/src/storage/erasure_coding/: ec_bitrot.rs  ec_decoder.rs  ec_encoder.rs  ec_locate.rs  ec_shard.rs  ec_volume.rs  mod.rs
seaweed-volume/src/storage/idx/: mod.rs
seaweed-volume/src/storage/needle/: crc.rs  mod.rs  needle.rs  ttl.rs
seaweed-volume/src/storage/needle_map/: compact_map.rs
seaweed-volume/tests/: http_integration.rs
seaweed-volume/tools/: generate_go_volume_docs.go
seaweedfs-rdma-sidecar/: .dockerignore  CORRECT-SIDECAR-APPROACH.md  CURRENT-STATUS.md  DOCKER-TESTING.md  Dockerfile.integration-test  Dockerfile.mount-rdma  Dockerfile.performance-test  Dockerfile.rdma-engine  Dockerfile.rdma-engine.simple  Dockerfile.sidecar  Dockerfile.test-client  FUTURE-WORK-TODO.md  IMPLEMENTATION-TODO.md  Makefile  RDMA-MOUNT-TESTING.md  RDMA-SIMULATION.md  README.md  REAL-HARDWARE-TESTING.md  REVIEW_FEEDBACK.md  RUST_ENGINE_STATUS.md  UCX_ADVANTAGES.md  WEED-MOUNT-CODE-PATH.md  WEED-MOUNT-RDMA-DESIGN.md  docker-compose.mount-rdma.yml  docker-compose.rdma-sim.yml  docker-compose.yml  go.mod  go.sum  test-fixes-standalone.go  test-rdma-integration.sh
seaweedfs-rdma-sidecar/rdma-engine/: Cargo.toml  README.md  REAL_RDMA.md
seaweedfs-rdma-sidecar/rdma-engine/src/: error.rs  ipc.rs  lib.rs  main.rs  memory.rs  rdma.rs  rdma_real.rs  session.rs  ucx.rs
snap/: README.md  snapcraft.yaml
src/: command.go  export.go  fix.go  master.go  upload.go  version.go  volume.go  weed.go
sw-block/: README.md
telemetry/: DEPLOYMENT.md  README.md  docker-compose.yml  grafana-dashboard.json  prometheus.yml
terraform/: .gitignore  README.md
unmaintained/: README.txt
util/: gostd
weed/: .gitignore  Makefile  filer.toml  fix.go  glide.yaml  main.go  size.txt  volume.go  weed.go  weed_test.go
weed-fs/: .project  build
(+6813 files in other folders)
