[package]
name = "rdma-engine"
version = "0.1.0"
edition = "2021"
authors = ["SeaweedFS Team <dev@seaweedfs.com>"]
description = "High-performance RDMA engine for SeaweedFS sidecar"
license = "Apache-2.0"

[[bin]]
name = "rdma-engine-server"
path = "src/main.rs"

# Phase-1 proof: a real IBV_WR_RDMA_READ over SoftRoCE loopback (requires Linux +
# libibverbs/librdmacm). Build with: cargo build --features real-rdma --bin rdma-loopback
[[bin]]
name = "rdma-loopback"
path = "src/bin/rdma_loopback.rs"
required-features = ["real-rdma"]

# Standalone cross-process RDMA target + client (real file data over rxe).
[[bin]]
name = "rdma-target"
path = "src/bin/rdma_target.rs"
required-features = ["real-rdma"]

[[bin]]
name = "rdma-client"
path = "src/bin/rdma_client.rs"
required-features = ["real-rdma"]

[lib]
name = "rdma_engine"
path = "src/lib.rs"

[dependencies]
# UCX (Unified Communication X) for high-performance networking
# Much better than direct libibverbs - provides unified API across transports
libc = "0.2"
libloading = "0.8"  # Dynamic loading of UCX libraries

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization for IPC
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rmp-serde = "1.1"  # MessagePack for efficient IPC

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID and time handling
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Memory management and utilities
memmap2 = "0.9"
bytes = "1.11"
parking_lot = "0.12"  # Fast mutexes

# IPC and networking
nix = { version = "0.27", features = ["mman"] }  # Unix domain sockets and system calls
async-trait = "0.1"  # Async traits

# Real RDMA via libibverbs + librdmacm (raw FFI). Optional, Linux-only; pulled in
# by the `real-rdma` feature. Used by src/rdma_real.rs (RealRdmaContext).
rdma-sys = { version = "0.3", optional = true }

# Configuration
clap = { version = "4.0", features = ["derive"] }
config = "0.13"

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
tempfile = "3.0"

[features]
default = ["mock-ucx"]
mock-ucx = []
real-ucx = []  # UCX integration for production RDMA
real-rdma = ["dep:rdma-sys"]  # real libibverbs/rdma_cm datapath (SoftRoCE/real NIC)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"



[package.metadata.docs.rs]
features = ["real-rdma"]

[patch.crates-io]
rdma-sys = { path = "vendor/rdma-sys" }
